Removing cran-comments HTML file

--- a/cran-comments.html
+++ b/cran-comments.html
@@ -601,8 +601,16 @@ body {
 <body>
 
 <h1 id="cran-comments">CRAN Comments</h1>
-<p>Adrian (Abbas) Salavaty 15/01/2020 (updated on 15 January, 2020)</p>
-<h2 id="r-markdown">R Markdown</h2>
+<p>Adrian (Abbas) Salavaty 15/01/2020 (updated on 17 January, 2020)</p>
+<h2 id="test-environments">Test environments</h2>
+<ul>
+<li>local OS X install, R 3.6.2</li>
+<li>win-builder (devel and release)</li>
+</ul>
+<h2 id="r-cmd-check-results">R CMD check results</h2>
+<p>There were no ERRORs, WARNINGs or NOTEs.</p>
+<h2 id="downstream-dependencies">Downstream dependencies</h2>
+<p>As this is my first submission of the “influential” package, there are currently no downstream dependencies for that.</p>
 
 </body>
 </html>
